<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_informationen"
    tools:context="de.armin.android.regionalschmankerln.Informationen"
    android:background="#ffffff">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kriterien für regionale Produkte"
                android:id="@+id/id_informationen1"
                android:textStyle="bold"
                android:textSize="22dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. Definition der Region"
                android:id="@+id/id_informationen2"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_1"
                android:id="@+id/id_informationen3"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/id_informationenb1"
                android:src="@drawable/region"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Produktkategorien"
                android:id="@+id/id_informationen4"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_2"
                android:id="@+id/id_informationen5"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.1. Rohprodukte"
                android:id="@+id/id_informationen6"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_3"
                android:id="@+id/id_informationen7"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.1.1. Gemüse &amp; Pilze"
                android:id="@+id/id_informationen8"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_4"
                android:id="@+id/id_informationen9"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.1.2. Obst &amp; Beeren"
                android:id="@+id/id_informationen10"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_5"
                android:id="@+id/id_informationen11"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.1.3. Fleisch &amp; Fisch"
                android:id="@+id/id_informationen12"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_6"
                android:id="@+id/id_informationen13"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.1.4. Kräuter"
                android:id="@+id/id_informationen14"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_7"
                android:id="@+id/id_informationen15"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.1.5. Sonstiges"
                android:id="@+id/id_informationen16"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_8"
                android:id="@+id/id_informationen17"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.2. Verarbeitete Rohprodukte"
                android:id="@+id/id_informationen18"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_9"
                android:id="@+id/id_informationen19"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.3. Zusammengesetzte Produkte"
                android:id="@+id/id_informationen20"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_10"
                android:id="@+id/id_informationen21"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.4. Zusammengesetzte Produkte"
                android:id="@+id/id_informationen22"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_11"
                android:id="@+id/id_informationen23"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.4.1. Säfte"
                android:id="@+id/id_informationen24"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_12"
                android:id="@+id/id_informationen25"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.4.2. Liköre &amp; Schnäpse"
                android:id="@+id/id_informationen26"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_13"
                android:id="@+id/id_informationen27"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.4.2. Biere"
                android:id="@+id/id_informationen28"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_14"
                android:id="@+id/id_informationen29"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2.4.3. Tee"
                android:id="@+id/id_informationen30"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informationen_15"
                android:id="@+id/id_informationen31"
                android:textSize="15dp" />







        </LinearLayout>
    </ScrollView>

</RelativeLayout>
