<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity"
    android:background="#ffffff">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Herzlich Willkommen!"
        android:id="@+id/id_startseitetext1"
        android:textStyle="bold"
        android:textSize="30dp"
        android:autoText="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startseite_absatz1"
        android:id="@+id/id_startseitetext2"
        android:textSize="15dp"
        android:textIsSelectable="false" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="262dp"
                android:id="@+id/id_startseiteb1"
                android:src="@drawable/bildhtl"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startseite_absatz2"
                android:id="@+id/id_startseitetext3"
                android:textSize="15dp"
                android:textIsSelectable="false"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Was ist regionalschmankerln.at?"
                android:id="@+id/id_startseitetext4"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startseite_absatz3"
                android:id="@+id/id_startseitetext5"
                android:textSize="15dp"
                android:textIsSelectable="false"
                android:layout_marginTop="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/id_startseiteb2"
                android:src="@drawable/bild3"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startseite_absatz4"
                android:id="@+id/id_startseitetext6"
                android:textSize="15dp"
                android:textIsSelectable="false"
                android:layout_marginTop="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:id="@+id/id_startseiteb3"
                android:src="@drawable/bild2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vorteil von Regionalschmankerln"
                android:id="@+id/id_startseitetext7"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startseite_absatz5"
                android:id="@+id/id_startseitetext8"
                android:textSize="15dp"
                android:textIsSelectable="false"
                android:layout_marginTop="5dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:id="@+id/id_startseiteb4"
                android:src="@drawable/bild1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />




        </LinearLayout>
    </ScrollView>


</RelativeLayout>
